Fixed layout bug (Had a width 100% in here for some reason...)

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,6 @@ h1 {
   margin-top: 30px;
   padding: 30px;
   color: #fff;
-  width: 100%;
   margin: 20px;
   display: inline-block;
   box-sizing: border-box;
